(library
(name        Bsonc)
  (public_name bsonc)
  (libraries ctypes ctypes.foreign str memcpy)
  ;(flags         (:include c_flags.sexp))
  (c_library_flags (:include c_library_flags.sexp))
  (ocamlopt_flags -ccopt (:include c_flags.sexp))
)

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps    (:x ../config/discover.exe))
  (action  (run %{x} -ocamlc %{ocamlc}))
)

